_sass/n3fs-theme.scss
@import "reboot/bootstrap-reboot";

//@import 'https://fonts.googleapis.com/css?family=Lato:400,700';

/*@font-face {
  font-family: 'Slapstick Comic';
  src: url('/assets/fonts/SF_Slapstick_Comic-webfont.eot');
  src: url('/assets/fonts/SF_Slapstick_Comic-webfont.eot?#iefix') format('embedded-opentype'),
     url('/assets/fonts/SF_Slapstick_Comic-webfont.woff') format('woff'),
     url('/assets/fonts/SF_Slapstick_Comic-webfont.ttf') format('truetype'),
     url('/assets/fonts/SF_Slapstick_Comic-webfont.svg#sf_slapstick_comicregular') format('svg');
  font-weight: normal;
  font-style: normal;
}*/

/* lato-regular - latin */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 400;
  src: url('/assets/fonts/lato-v15-latin-regular.eot'); /* IE9 Compat Modes */
  src: local('Lato Regular'), local('Lato-Regular'),
       url('/assets/fonts/lato-v15-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('/assets/fonts/lato-v15-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('/assets/fonts/lato-v15-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('/assets/fonts/lato-v15-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('/assets/fonts/lato-v15-latin-regular.svg#Lato') format('svg'); /* Legacy iOS */
}

/* lato-700 - latin */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 700;
  src: url('/assets/fonts/lato-v15-latin-700.eot'); /* IE9 Compat Modes */
  src: local('Lato Bold'), local('Lato-Bold'),
       url('/assets/fonts/lato-v15-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('/assets/fonts/lato-v15-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
       url('/assets/fonts/lato-v15-latin-700.woff') format('woff'), /* Modern Browsers */
       url('/assets/fonts/lato-v15-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
       url('/assets/fonts/lato-v15-latin-700.svg#Lato') format('svg'); /* Legacy iOS */
}


$accent-color: #e03131;
$link-color: $accent-color;
$link-active-color: #e44;
$background-color: #111;
$foreground-color: #ddd;

$page-width: 1280px;
$content-width: 800px;

// $header-font: 'Slapstick Comic', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
$content-font: Lato, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
$header-font: $content-font;

$floating-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
html{
  font-size: 22px;
}
body{
    height: 100%;
    background-color: $background-color;
    color: $foreground-color;
    font-family: $content-font;
    line-height: 1.5;
    overflow-x: hidden;
}

h1, h2, h3, h4, h5, h6{
  color: #fff;
}
h1{
  font-size: 48px;
  line-height: 1;
  margin-bottom: 2rem;
}
h2{
  font-size: 32px;
  margin-top: 2rem;
  margin-bottom: 1rem;
  line-height: 1.25;
}
h3{
  font-size: 28px;
}
h4{
  text-transform: uppercase;
  font-size: 0.9rem;
  letter-spacing: 0.2ch;
  border-bottom: 1px solid currentColor;
}
:any-link{
  color: $link-color;
}
:any-link:focus, :any-link:hover{
  color: $link-active-color;
  text-decoration: none;
  border-bottom: 0.1em solid currentColor;
}

sub, sup{
  font-size: 60%;
}

em{
  font-style: normal;
  background-color: $accent-color;
  color: $foreground-color;
  padding: 0 0.5ch 0.25ch;
}
del{
  opacity: 0.5;
}

hr{
  margin-bottom: 1rem;
  color: currentColor;
  border: none;
  border-bottom: 2px solid currentColor;
  opacity: 0.5;
}

table{
  min-width: 100%;
  border-collapse: collapse;
  td, th{
    //border: 1px dashed currentColor;
    padding: 0.25rem;
    vertical-align: top;
  }
  thead, tbody{
    border-bottom: 1px solid currentColor;
  }
  tr:hover{
    background-color: rgba($accent-color, 0.2);
  }
  margin-bottom: 1rem;
}

.lead{
  font-size: 1.2rem;
}

article{
    max-width: calc(#{$content-width} + 1rem);
    margin: 0 auto;
    padding: 0 0.5rem;
    min-height: calc(100vh - 128px - 96px - 8.749vw)
}

.post-meta{
  opacity: 0.5;
}

.action{
  font-weight: bold;
  margin-right: 1rem;
  &::before{
    content: '';
    display: inline-block;
    height: 0.75em;
    width: 0.75em;
    background-image: url(/assets/images/icon-arrow.svg);
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
    margin-right: 0.5ch;
  }

  &:hover em{
    background: none;
    color: currentColor;
  }
}

.back{
  &::before{
    content: '';
    display: inline-block;
    height: 0.75em;
    width: 0.75em;
    background-image: url(/assets/images/icon-arrow.svg);
    background-repeat: no-repeat;
    background-size: contain;
    background-position: center;
    margin-right: 0.5ch;
    transform: scaleX(-1);
  }
}

//Site header styles

.header{
  max-width: $page-width;
  margin: 0 auto;
  margin-bottom: 96px;
  padding: 16px;

  // Rotated rect background
  &::before{
    content: '';
    display: block;
    position: absolute;
    top: -72px;
    height: 128px;
    width: $page-width;
    background-color: $accent-color;
    z-index: -1;
    transform: rotate(-5deg);
  }

  .header-body{
    display: flex;
    align-items: center;
    justify-content: space-between;
    
    .header-logo{
      display: block;
      background-image: url(/assets/images/logo-small@2x.png);
      background-size: contain;
      background-repeat: no-repeat;
      background-position: center;
      width: 96px;
      height: 96px;
      color: transparent;
      font-size: 0;
      transition: transform 0.25s ease-out;

      &:hover, &:focus{
        border: none;
        transform: rotate(-5deg) scale(1.2);
      }
    }
    .header-menu{
      .header-menu-nav{
        display: flex;
        #header-menu-check{
          visibility: hidden;
        }

        // Toggle-able menu for mobile
        .header-menu-links{
          display: none;
        }
        .header-menu-link{
          margin: 0 0.5rem;
        }
        #header-menu-check:checked ~ .header-menu-links{
          display: block;
          position: fixed;
          top: 128px;
          left: 0;
          width: 100%;
          background-color: $background-color;
          z-index: 99;
          .header-menu-link{
            display: block;
            padding: 0.5rem;
            text-align: center;
          }
        }
        #header-menu-toggle{
          border: 2px solid currentColor;
          padding: 0 1rem;
          border-radius: 0.25rem;
        }
        #header-menu-check:checked ~ #header-menu-toggle{
          position: fixed;
          top: 0;
          left: 0;
          width: 100%;
          height: 100%;
          z-index: 98;
          background-color: rgba(0, 0, 0, 0.75);
          text-align: center;
          padding-top: 64px;
          border-radius: 0;
          border: none;
        }

        //Overrides for larger screens
        @media (min-width: $page-width){
          #header-menu-toggle{
            display: none;
          }
          .header-menu-links{
            display: block;
          }
        }
      }
    }
  }
  .header-message{
    margin-top: 32px;
    color: #fff;
    border: 1px solid $accent-color;
    border-radius: 8px;
    background-color: rgba($accent-color, 0.5);
    padding: 4px 8px;
    font-size: 0.8rem;
    a{
      color: scale-color($color: $accent-color, $lightness: 50%);
    }
  }
}

// Site footer styles
footer{
  background-image: linear-gradient(175deg, #{$background-color}, #{$background-color} calc(50% - 1px), #{$accent-color} calc(50% + 1px), #{$accent-color});
  background-size: 100% 8.749vw;
  background-repeat: no-repeat;
  background-color: $accent-color;
  min-height: 8.749vw; // assumes 5 degree angle
  font-size: 0.5rem;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;

  .footer-content{
    text-align: right;
    padding: 0.25rem;
    color: $background-color;
    p{
      margin: 0 auto;
    }
    :any-link{
      color: currentColor;
  
      &:hover, &:focus{
        color: currentColor;
      }
    }
  }
}


// Home-page specific styles
.home-page{
  section{
    padding: 32px 0;
    background-color: $background-color;
  }
  .container{
    max-width: calc( #{$content-width} + 1rem);
    margin: 0 auto;
    padding: 0 0.5rem;
  }
  #intro{
    padding: 128px 0 192px;
    background: none;
    h1{
      margin-bottom: 0.5rem;
      font-weight: normal;
    }
  }
  #servers{
    background-color: transparent;
    background-image: linear-gradient(175deg, transparent 48%, #{$accent-color} 48%, #{$accent-color} 52%, #{$background-color} 52%);
    .server-list{
      display: flex;
      flex-wrap: wrap;
      justify-content: space-around;
    }
    .server-item{
      display: block;
      flex: none;
      width: 350px;
      background-color: $background-color;
      color: $foreground-color;
      border-radius: 8px;
      margin: 16px auto;
      padding: 48px 1rem 1rem;
      box-shadow: $floating-shadow;

      transition: transform 0.25s ease-out, opacity 0.25s ease-out;

      h3{
        font-weight: bold;
        text-transform: none;
        color: currentColor;

        font-size: 1.25rem;
        text-align: center;
        margin: 0;
        margin-bottom: 1rem;
      }
      p{
        font-size: 0.75rem;
        margin: 0;
        opacity: 0.5;
      }

      &:hover, &:focus{
        border: none;
        background-image: none;
        background-color: $foreground-color;
        color: $background-color;
        transform: scale(1.1);
        opacity: 1;
        p{
          opacity: 0.75;
        }
      }
    }
  }
  #news{
    .post-list{
      list-style: none;
      padding-left: 0;
      li{
        margin-bottom: 1rem;
        h3{
          text-transform: none;
          margin: 0;
          font-weight: normal;
        }
        .post-details{
          font-size: 0.75rem;
          opacity: 0.8;
          .post-date{
            opacity: 0.5;
          }
        }
      }
    }
    .rss-subscribe{
      font-size: 0.75rem;
    }
    .news-container{
      display: flex;
      flex-wrap: wrap;
      .news-posts{
        flex: auto;
        width: $content-width - 320px;
        h3{
          line-height: 1;
        }
      }
      .news-twitter{
        flex: auto;
        width: 320px;
        padding-left: 1rem;
        iframe{
          height: 100% !important;
        }
      }
    }
  }
}

#server-minecraft{
  background-image: url(/assets/images/minecraft-tile.png);
}

#server-discord{
  background-image: linear-gradient(to bottom, #458, #235);
}

.panorama-background{
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: -2;

  /*background-image: url(/assets/images/background/panorama_0.png);
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;*/
  background-color: #666; 

  opacity: 0.25;
  transition: opacity 2s ease-in;

  &.focus{
    opacity: 1;
  }
  canvas{
    width: 100%;
    height: 100%;
    opacity: 0;
  }
}

